--- a/main.html
+++ b/main.html
@@ -624,6 +624,130 @@ cat(&quot;Precisión del árbol con divisiones máximas de 8:&quot;) # nolint</c
 <div id="compare-los-resultados-con-el-modelo-de-regresión-lineal-de-la-hoja-anterior-cuál-lo-hizo-mejor" class="section level1">
 <h1>5. Compare los resultados con el modelo de regresión lineal de la
 hoja anterior, ¿cuál lo hizo mejor?</h1>
+<p>Comparando el resultado de predicción de ahora podemos afirmar que el
+modelo de regresion lineal nos dio un mejor resultado ya que predijo de
+manera mas rapida y simple la modelacion entre la variable respuesta que
+neceistabamos como el precio de las casa.</p>
+</div>
+<div id="entrene-un-modelo-usando-validación-cruzada-prediga-con-él.-le-fue-mejor-que-al-modelo-anterior" class="section level1">
+<h1>10 Entrene un modelo usando validación cruzada, prediga con él. ¿le
+fue mejor que al modelo anterior?</h1>
+<pre class="r"><code>library(caret)
+library(mlbench)
+
+data(PimaIndiansDiabetes)
+
+set.seed(123)
+
+# Dividir los datos en conjuntos de entrenamiento (70%) y prueba (30%)
+training_index &lt;- createDataPartition(PimaIndiansDiabetes$diabetes, p = 0.7, list = FALSE)
+training &lt;- PimaIndiansDiabetes[training_index, ]
+testing &lt;- PimaIndiansDiabetes[-training_index, ]
+
+# Definir la fórmula para el modelo
+formula &lt;- diabetes ~ .
+
+# Entrenar el primer modelo con validación cruzada de 10 iteraciones
+model1 &lt;- train(formula, data = training, method = &quot;glm&quot;, trControl = trainControl(method = &quot;cv&quot;, number = 10))
+
+# Hacer predicciones con el primer modelo
+predictions1 &lt;- predict(model1, newdata = testing)
+
+# Evaluar el rendimiento del primer modelo
+accuracy1 &lt;- mean(predictions1 == testing$diabetes)
+cat(&quot;La precisión del primer modelo es:&quot;, accuracy1, &quot;\n&quot;)</code></pre>
+<pre><code>## La precisión del primer modelo es: 0.7695652</code></pre>
+<pre class="r"><code># Entrenar el segundo modelo con validación cruzada de 10 iteraciones
+model2 &lt;- train(formula, data = training, method = &quot;rf&quot;, trControl = trainControl(method = &quot;cv&quot;, number = 10))
+
+# Hacer predicciones con el segundo modelo
+predictions2 &lt;- predict(model2, newdata = testing)
+
+# Evaluar el rendimiento del segundo modelo
+accuracy2 &lt;- mean(predictions2 == testing$diabetes)
+cat(&quot;La precisión del segundo modelo es:&quot;, accuracy2, &quot;\n&quot;)</code></pre>
+<pre><code>## La precisión del segundo modelo es: 0.7869565</code></pre>
+<p>Como podemos observar el segundo modelo tiene un mucho mejor
+rendimiento que el primero.</p>
+</div>
+<div id="haga-al-menos-3-modelos-más-cambiando-la-profundidad-del-árbol.-cuál-funcionó-mejor" class="section level1">
+<h1>11 Haga al menos, 3 modelos más cambiando la profundidad del árbol.
+¿Cuál funcionó mejor?</h1>
+<pre class="r"><code>library(rpart)
+library(rpart.plot)
+library(caret)
+
+# Cargar los datos
+data(iris)
+
+# Definir el vector de índices de los pliegues de validación cruzada
+folds &lt;- createFolds(iris$Species, k = 10)
+
+# Vector para guardar los resultados de la validación cruzada
+cv_results &lt;- c()
+
+# Ajustar tres modelos de árbol con diferentes profundidades
+for (i in 1:3) {
+  
+  # Definir el modelo
+  model &lt;- rpart(Species ~ ., data = iris, control = rpart.control(maxdepth = i))
+  
+  # Realizar la validación cruzada
+  cv &lt;- train(Species ~ ., data = iris, method = &quot;rpart&quot;,
+              trControl = trainControl(method = &quot;cv&quot;, index = folds),
+              tuneGrid = data.frame(cp = 0.01))
+  
+  # Guardar los resultados
+  cv_results[i] &lt;- cv$results$Accuracy
+  
+}
+
+# Mostrar los resultados del accuracy de los tres modelos
+cv_results</code></pre>
+<pre><code>## [1] 0.3333333 0.3333333 0.3333333</code></pre>
+<p>Los tres modelos tienen la misma precisión (accuracy) de 0.3333333,
+lo cual significa que no hay diferencia en términos de la capacidad del
+modelo para clasificar correctamente los datos de prueba.</p>
+</div>
+<div id="repita-los-análisis-usando-random-forest-como-algoritmo-de-predicción-explique-sus-resultados-comparando-ambos-algoritmos" class="section level1">
+<h1>12 Repita los análisis usando random forest como algoritmo de
+predicción, explique sus resultados comparando ambos algoritmos</h1>
+<pre class="r"><code># Cargar la librería de Random Forest
+library(randomForest)</code></pre>
+<pre><code>## randomForest 4.7-1.1</code></pre>
+<pre><code>## Type rfNews() to see new features/changes/bug fixes.</code></pre>
+<pre><code>## 
+## Attaching package: &#39;randomForest&#39;</code></pre>
+<pre><code>## The following object is masked from &#39;package:ggplot2&#39;:
+## 
+##     margin</code></pre>
+<pre><code>## The following object is masked from &#39;package:dplyr&#39;:
+## 
+##     combine</code></pre>
+<pre class="r"><code># Dividir los datos en conjuntos de entrenamiento y prueba
+set.seed(123)
+trainIndex &lt;- createDataPartition(y = iris$Species, p = 0.8, list = FALSE)
+training &lt;- iris[trainIndex, ]
+testing &lt;- iris[-trainIndex, ]
+
+# Entrenar un modelo de Random Forest
+rf_model &lt;- randomForest(Species ~ ., data = training)
+
+# Realizar predicciones en el conjunto de prueba
+rf_predictions &lt;- predict(rf_model, testing)
+
+# Evaluar la precisión del modelo
+rf_accuracy &lt;- mean(rf_predictions == testing$Species)
+rf_accuracy</code></pre>
+<pre><code>## [1] 0.9333333</code></pre>
+<p>En general, el algoritmo de Random Forest tiende a ser más preciso
+que el árbol de decisión, ya que utiliza múltiples árboles de decisión
+para hacer predicciones en lugar de uno solo. Además, Random Forest
+tiene la capacidad de manejar mejor los datos desequilibrados y los
+datos con múltiples variables correlacionadas. Sin embargo, el tiempo de
+entrenamiento y evaluación del modelo de Random Forest puede ser mayor
+que el del árbol de decisión, especialmente en conjuntos de datos más
+grandes.</p>
 </div>
 
 
